--- a/contador_pasos/pubspec.yaml
+++ b/contador_pasos/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.0
   font_awesome_flutter: ^10.9.0
-
+  shared_preferences: ^2.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
